--- a/.github/workflows/deploy-lambda.yml
+++ b/.github/workflows/deploy-lambda.yml
@@ -13,6 +13,14 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+        
+      - name: Checkout private action
+        uses: actions/checkout@v3
+        with:
+          repository: chloe1818/lambda-github-action
+          ref: main
+          token: ${{ secrets.PAT_TOKEN }}
+          path: .github/actions/lambda-github-action
       
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
@@ -21,7 +29,7 @@ jobs:
           aws-region: us-west-2
     
       - name: Deploy Lambda
-        uses: chloe1818/lambda-github-action@main
+        uses: ./.github/actions/lambda-github-action
         with:
           function-name: test-lambda
           zip-file-path: ./lambda-function.zip
