--- a/.github/workflows/deploy-lambda.yml
+++ b/.github/workflows/deploy-lambda.yml
@@ -10,6 +10,10 @@ on:
 jobs:
   test-and-deploy:
     runs-on: ubuntu-latest
+    # Add permissions needed for OIDC authentication with AWS
+    permissions:
+      id-token: write
+      contents: read
        
     steps:
       - name: Checkout code
