Update github action

--- a/.github/workflows/deploy-lambda.yml
+++ b/.github/workflows/deploy-lambda.yml
@@ -34,7 +34,7 @@ jobs:
           aws-region: us-west-2
     
       - name: Deploy Lambda
-        uses: ./.github/actions/lambda-github-action
+        uses: chloe1818/lambda-github-action@v1
         with:
           function-name: test-lambda
           code-artifacts-dir: ./dist 
