--- a/.github/workflows/deploy-lambda.yml
+++ b/.github/workflows/deploy-lambda.yml
@@ -48,6 +48,7 @@ jobs:
         uses: ./.github/actions/lambda-github-action
         with:
           function-name: test-lambda
-          code-artifacts-dir: ./dist 
+          code-artifacts-dir: ./dist
+          aws-region: us-west-2
           memory-size: 256
           publish: true
