Fix: Change aws-region to region in Deploy Lambda step

--- a/.github/workflows/deploy-lambda.yml
+++ b/.github/workflows/deploy-lambda.yml
@@ -49,6 +49,6 @@ jobs:
         with:
           function-name: test-lambda
           code-artifacts-dir: ./dist
-          aws-region: us-west-2
+          region: us-west-2
           memory-size: 256
           publish: true
