--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "test-lambda",
   "version": "1.0.0",
   "description": "A simple Lambda function that prints hello world",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
