Update Lambda deployment workflow and add workspace config

--- a/.github/workflows/deploy-lambda.yml
+++ b/.github/workflows/deploy-lambda.yml
@@ -51,4 +51,5 @@ jobs:
           code-artifacts-dir: ./dist
           region: us-west-2
           memory-size: 256
+          dry-run: false
           publish: true
