--- a/.github/workflows/deploy-lambda.yml
+++ b/.github/workflows/deploy-lambda.yml
@@ -48,7 +48,7 @@ jobs:
         uses: ./.github/actions/lambda-github-action
         with:
           function-name: test-lambda
-          code-artifacts-path: ./function.zip
+          code-artifacts-dir: ./dist
           region: us-west-2
           memory-size: 256
           dry-run: false
