--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A simple Lambda function that prints hello world",
   "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "mkdir -p dist && cp index.js dist/"
   },
   "dependencies": {
     "@aws-doc-sdk-examples/lib": "^1.0.0",
