--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "@aws-doc-sdk-examples/lib": "^1.0.0",
-    "@aws-sdk/client-lambda": "^3.163.0"
+    "@aws-sdk/client-lambda": "^3.163.0",
+    "adm-zip": "^0.5.16"
   },
   "devDependencies": {
     "@aws-sdk/client-iam": "^3.241.0",
