--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@aws-doc-sdk-examples/lib": "^1.0.0",
     "@aws-sdk/client-lambda": "^3.163.0",
+    "@smithy/util-base64": "^4.0.0",
     "adm-zip": "^0.5.16"
   },
   "devDependencies": {
