--- a/.github/workflows/deploy-lambda.yml
+++ b/.github/workflows/deploy-lambda.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '18'
+          node-version: '22'
           
       - name: Install dependencies and build Lambda function
         run: |
@@ -52,7 +52,7 @@ jobs:
       - name: Deploy Lambda
         uses: ./.github/actions/lambda-github-action
         with:
-          function-name: test-lambda
+          function-name: new-lambda
           code-artifacts-dir: ./dist
           region: us-west-2
           memory-size: 256
