--- a/.github/workflows/deploy-lambda.yml
+++ b/.github/workflows/deploy-lambda.yml
@@ -52,7 +52,7 @@ jobs:
       - name: Deploy Lambda
         uses: ./.github/actions/lambda-github-action
         with:
-          function-name: test-lambda
+          function-name: new-lambda
           code-artifacts-dir: ./dist
           region: us-west-2
           memory-size: 512
