Test fucntion creation

--- a/.github/workflows/deploy-lambda.yml
+++ b/.github/workflows/deploy-lambda.yml
@@ -59,3 +59,5 @@ jobs:
           dry-run: false
           publish: true
           role: arn:aws:iam::660753258521:role/lambda-test-execution-role
+          handler: index.handler
+          runtime: nodejs22.x
