--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
   "name": "test-lambda",
   "version": "1.0.0",
-  "description": "A simple Lambda function that prints hello world",
+  "description": "A Lambda function that uses external dependencies",
   "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "mkdir -p dist && cp index.js dist/"
+    "build": "mkdir -p dist && cp index.js dist/ && cp -r node_modules dist/"
   },
   "dependencies": {
     "@aws-doc-sdk-examples/lib": "^1.0.0",
     "@aws-sdk/client-lambda": "^3.163.0",
     "@smithy/util-base64": "^4.0.0",
-    "adm-zip": "^0.5.16"
+    "adm-zip": "^0.5.16",
+    "axios": "^1.6.5",
+    "moment": "^2.30.1"
   },
   "devDependencies": {
     "@aws-sdk/client-iam": "^3.241.0",
