--- a/.github/workflows/deploy-lambda.yml
+++ b/.github/workflows/deploy-lambda.yml
@@ -32,6 +32,13 @@ jobs:
           token: ${{ secrets.PAT_TOKEN }}
           path: .github/actions/lambda-github-action
       
+      - name: Install and build GitHub Action
+        working-directory: .github/actions/lambda-github-action
+        run: |
+          npm ci
+          npm run build
+
+
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
