--- a/.github/workflows/deploy-lambda.yml
+++ b/.github/workflows/deploy-lambda.yml
@@ -53,10 +53,10 @@ jobs:
           architectures: arm64
           code-signing-config-arn: ''
           dead-letter-config: ''
-          description: This is to test the lambda function.
+          function-description: This is to test the lambda function.
           environment: '{"Variables":{"NODE_ENV":"production"}}'
           ephemeral-storage: 1024
-          file-system-config: ''
+          file-system-configs: ''
           handler: index.handler
           image-config: ''
           kms-key-arn: ''
