--- a/.github/workflows/deploy-lambda.yml
+++ b/.github/workflows/deploy-lambda.yml
@@ -60,6 +60,8 @@ jobs:
           handler: index.handler
           image-config: ''
           kms-key-arn: ''
+          source-kms-key-arn: ''
+          revision-id: ''
           layers: []
           logging-config: '{"LogFormat": "JSON", "ApplicationLogLevel": "INFO", "SystemLogLevel": "INFO"}'
           snap-start: '{"ApplyOn": "PublishedVersions"}'
