--- a/.github/workflows/deploy-lambda.yml
+++ b/.github/workflows/deploy-lambda.yml
@@ -61,8 +61,8 @@ jobs:
           image-config: ""
           kms-key-arn: ""
           source-kms-key-arn: ""
-          # revision-id: ""
-          # layers: "[]"
+          revision-id: ""
+          layers: "[]"
           # logging-config: '{"LogFormat":"JSON","ApplicationLogLevel":"INFO","SystemLogLevel":"INFO"}'
           # snap-start: '{"ApplyOn":"PublishedVersions"}'
           # tags: '{"Project":"LambdaTest","Environment":"Test","Owner":"DevOps"}'
