--- a/.github/workflows/deploy-lambda.yml
+++ b/.github/workflows/deploy-lambda.yml
@@ -63,8 +63,8 @@ jobs:
           source-kms-key-arn: ""
           revision-id: ""
           layers: "[]"
-          # logging-config: '{"LogFormat":"JSON","ApplicationLogLevel":"INFO","SystemLogLevel":"INFO"}'
-          # snap-start: '{"ApplyOn":"PublishedVersions"}'
+          logging-config: '{"LogFormat":"JSON","ApplicationLogLevel":"INFO","SystemLogLevel":"INFO"}'
+          snap-start: '{"ApplyOn":"PublishedVersions"}'
           # tags: '{"Project":"LambdaTest","Environment":"Test","Owner":"DevOps"}'
           # timeout: 5
           # tracing-config: '{"Mode":"Active"}'
