--- a/.github/workflows/deploy-lambda.yml
+++ b/.github/workflows/deploy-lambda.yml
@@ -64,8 +64,8 @@ jobs:
           revision-id: ""
           layers: "[]"
           logging-config: '{"LogFormat":"JSON","ApplicationLogLevel":"INFO","SystemLogLevel":"INFO"}'
-          # tags: '{"Project":"LambdaTest","Environment":"Test","Owner":"DevOps"}'
-          # timeout: 5
+          tags: '{"Project":"LambdaTest","Environment":"Test","Owner":"DevOps"}'
+          timeout: 5
           # tracing-config: '{"Mode":"Active"}'
           # vpc-config: '{"SubnetIds": ["subnet-12345678", "subnet-87654321"], "SecurityGroupIds": ["sg-12345678"]}'
           region: us-west-2
