--- a/.github/workflows/deploy-lambda.yml
+++ b/.github/workflows/deploy-lambda.yml
@@ -51,8 +51,8 @@ jobs:
           code-artifacts-dir: ./dist
           role: arn:aws:iam::660753258521:role/lambda-test-execution-role
           architectures: arm64
-          # code-signing-config-arn: ""
-          # dead-letter-config: '{"TargetArn": "arn:aws:sns:us-west-2:660753258521:lambda-errors"}'
+          code-signing-config-arn: ""
+          dead-letter-config: '{"TargetArn": "arn:aws:sns:us-west-2:660753258521:lambda-errors"}'
           # function-description: "This is to test the lambda function."
           # environment: '{"Variables":{"NODE_ENV":"production"}}'
           ephemeral-storage: 512
