--- a/.github/workflows/deploy-lambda.yml
+++ b/.github/workflows/deploy-lambda.yml
@@ -53,7 +53,7 @@ jobs:
           architectures: arm64
           code-signing-config-arn: ""
           dead-letter-config: ''
-          # function-description: "This is to test the lambda function."
+          function-description: "This is to test the lambda function."
           # environment: '{"Variables":{"NODE_ENV":"production"}}'
           ephemeral-storage: 512
           file-system-configs: "[]"
@@ -67,7 +67,7 @@ jobs:
           tags: '{"Project":"LambdaTest","Environment":"Test","Owner":"DevOps"}'
           timeout: 5
           tracing-config: '{"Mode":"Active"}'
-          # vpc-config: '{"SubnetIds": ["subnet-12345678", "subnet-87654321"], "SecurityGroupIds": ["sg-12345678"]}'
+          vpc-config: ''
           region: us-west-2
           memory-size: 512
           dry-run: false
